allprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    group 'io.var-http'
    version = project.findProperty('projVersion') ?: '1.0'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/persequor-com/ODINjector")
                credentials {
                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_CI_ACTOR")
                    password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_CI_TOKEN")
                }
            }
        }
    }

    publishing {
        repositories {
            maven {
                name = "GitHubPackages"
                url = uri("https://maven.pkg.github.com/persequor-com/var-http")
                credentials {
                    username = System.getenv("GITHUB_ACTOR")
                    password = System.getenv("GITHUB_TOKEN")
                }
            }
        }
        publications {
            gpr(MavenPublication) {
                from(components.java)
            }
        }
    }

}

subprojects {
    apply plugin: 'java-library'


    dependencies {
        testImplementation group: 'junit', name: 'junit', version: '4.12'
        implementation group: 'javax.inject', name: 'javax.inject', version: '1'
        testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
        implementation 'org.slf4j:slf4j-api:1.7.26'
    }


    test {
        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=jdk.httpserver/com.sun.net.httpserver=ALL-UNNAMED'

    }
}
